add put set_blockchain_ref()
